Remove default margin, padding and border

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* -------------------------- Global style */
 
-/*Remove default auto margin and auto padding*/
+/*Remove default auto margin, padding and border*/
 *{
     margin:0;
     padding:0;
