--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,12 @@ body {
     font-size: 100%;
 }
 
+h2 {
+    text-align: center;
+    font-size: 2rem;
+    padding: 24px;
+}
+
 /* --------------------------- Game layout */
 
 .game-area {
