--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,3 +37,8 @@ h2 {
     text-align: center;
 }
 
+.answer-option {
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
