--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,11 @@ h2 {
 }
 
 .answer-option {
+    border: 1px solid white;
+    border-radius: 4px;
     font-size: 1.5rem;
     letter-spacing: 2px;
     text-transform: uppercase;
+    margin: 16px 0px 16px;
+    padding: 8px;
 }
