--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,11 @@ h2 {
     text-align: center;
 }
 
+.flex-item-game img {
+    width: 100%;
+    height: 100%;
+}
+
 .answer-option {
     border: 1px solid white;
     border-radius: 4px;
