--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,11 @@ h2 {
     height: 100%;
 }
 
+.answer-area {
+    margin: auto;
+    width: 60%;
+}
+
 .answer-option {
     border: 1px solid white;
     border-radius: 4px;
