Add flex-direction/wrap properties for flex-container class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,9 @@ h2 {
 
 .flex-container {
     display: flex;
+    flex-direction: row; /* default value */
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
 }
 
