--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,12 +35,12 @@ h2 {
     align-items: center;
 }
 
-.flex-item-game {
+.flex-item {
     flex-basis: 100%;
     text-align: center;
 }
 
-.flex-item-game img {
+.flex-item img {
     width: 100%;
     height: 100%;
 }
