--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,10 @@ h2 {
     padding: 24px;
 }
 
-/* --------------------------- Game layout */
 
-.game-area {
-    width: 70vw;
-    height: 80vh;
-    margin: auto;
-}
+/* ------------------------------------------- MAIN */
 
+/* flex container used in most sections of the page */
 .flex-container {
     display: flex;
     flex-direction: row; /* default value */
@@ -43,6 +39,14 @@ h2 {
 .flex-item img {
     width: 100%;
     height: 100%;
+}
+
+/* --------------------------- Game layout */
+
+.game-area {
+    width: 70vw;
+    height: 80vh;
+    margin: auto;
 }
 
 .answer-area {
