--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,3 +80,10 @@ h2 {
         flex: 1;
     }
 }
+
+/* make home section image to appear below the text content */
+@media screen and (max-width: 768px) {
+    .flex-container {
+        flex-wrap: wrap-reverse;
+    }
+}
