--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,31 @@ h2 {
 
 .flex-item {
     flex-basis: 100%;
-    text-align: center;
 }
 
 .flex-item img {
     width: 100%;
     height: 100%;
 }
+
+/* -------------------------- Home section */
+
+h1 {
+    color: #E82517;
+    font-size: 2rem;
+    margin: 32px 0px 32px 32px;
+}
+
+.content-home {
+padding-left: 48px;
+}
+
+p {
+    font-size: 1.2rem;
+    margin: 16px 0px 16px 0px;
+
+}
+
 
 /* --------------------------- Game layout */
 
