--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
 
 body {
     background-color: black;
+    background-image:url("/assets/images/background-dark.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-size: cover;
     color: white;
     font-family: 'Arvo', serif;
     font-size: 100%;
