Change color of h1 for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ h2 {
 /* -------------------------- Home section */
 
 h1 {
-    color: #E82517;
+    color: #F06F66;
     font-size: 2rem;
     margin: 32px 0px 32px 38px;
 }
