--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,12 +74,11 @@ h1 {
 p {
     font-size: 1.5rem;
     margin: 16px 0px 16px 0px;
-
 }
 
 .btn-wrapper {
-    display: flex;
-    margin: 0px 0px 0px 62px;
+    display: inline-block;
+    margin-top: 8px;
 }
 
 #btn-start {
