--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,13 @@ site (9IDLE AMINATION: BOUNCY BOUNCY section).*/
     text-align: center;
 }
 
+#correctAnswer {
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    line-height: 3rem;
+}
+
+
 /*
 Learned how to create a Modal Box with CSS and JavaScript and adopted code from this W3Schools
 (https://www.w3schools.com/howto/howto_css_modals.asp) tutorial.
