--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,9 +135,9 @@ site (9IDLE AMINATION: BOUNCY BOUNCY section).*/
 /*
 Learned how to create a Modal Box with CSS and JavaScript and adopted code from this W3Schools
 (https://www.w3schools.com/howto/howto_css_modals.asp) tutorial.
-adopted code from this example https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal2 */
+Adopted code from this example https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal2 */
 
-/* The Modal (background) */
+/* The Modal (background) W3Schools tutorial */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -152,6 +152,7 @@ adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+/* Modal Box with CSS and JavaScript - W3Schools tutorial */
 .modal-content {
     position: relative;
     background-color: #454a4f;
@@ -159,9 +160,24 @@ adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
     padding: 0;
     border: 1px solid #888;
     width: 70%;
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
 }
 
-/* The Close Button */
+/* Add Animation. Modal Box with CSS and JavaScript - W3Schools tutorial */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+  
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button. Modal Box with CSS and JavaScript - W3Schools tutorial */
 .close {
     color: white;
     float: right;
@@ -169,6 +185,7 @@ adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
     font-weight: bold;
 }
 
+/* Modal Box with CSS and JavaScript - W3Schools tutorial */
 .close:hover,
 .close:focus {
   color: #000;
@@ -176,11 +193,13 @@ adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
   cursor: pointer;
 }
 
+/* Modal Box with CSS and JavaScript - W3Schools tutorial */
 .modal-header {
   padding: 2px 16px;
   color: white;
 }
 
+/* Modal Box with CSS and JavaScript - W3Schools tutorial */
 .modal-body {padding: 2px 16px;}
 
 
