--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,9 @@
 
 /*Remove default auto margin, padding and border*/
 * {
-    margin:0;
-    padding:0;
-    border:0;
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
 /* CSS variables for light theme */
@@ -52,7 +52,8 @@ h2 {
 /* flex container used in most sections of the page */
 .flex-container {
     display: flex;
-    flex-direction: row; /* default value */
+    /* default value */
+    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
@@ -77,7 +78,7 @@ h2 {
     font-size: 1rem;
     letter-spacing: 2px;
     text-transform: uppercase;
-    text-align:center;
+    text-align: center;
     margin: 16px 0px 16px;
     padding: 8px;
 }
@@ -117,8 +118,8 @@ p {
 Federico Dossena's (https://fdossena.com/?p=html5cool/buttons/i.frag)
 site (9IDLE AMINATION: BOUNCY BOUNCY section).*/
 .bouncy {
-    animation:bouncy 5s infinite linear;
-    position:relative;
+    animation: bouncy 5s infinite linear;
+    position: relative;
 }
 
 @keyframes bouncy {
@@ -130,7 +131,6 @@ site (9IDLE AMINATION: BOUNCY BOUNCY section).*/
     50%{top:0em}
     100%{top:0em;}
 }
-
 
 
 /* ------------------------------------------ Modal */
@@ -151,7 +151,6 @@ site (9IDLE AMINATION: BOUNCY BOUNCY section).*/
     line-height: 3rem;
 }
 
-
 /*
 Learned how to create a Modal Box with CSS and JavaScript and adopted code from this W3Schools
 (https://www.w3schools.com/howto/howto_css_modals.asp) tutorial.
@@ -159,17 +158,18 @@ Adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
 
 /* The Modal (background) W3Schools tutorial */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    /* Hidden by default */
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* Modal Box with CSS and JavaScript - W3Schools tutorial */
@@ -188,13 +188,27 @@ Adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
 
 /* Add Animation. Modal Box with CSS and JavaScript - W3Schools tutorial */
 @-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
 }
   
 @keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
+    from {
+        top: -300px;
+        opacity: 0
+    }
+
+    to {
+        top: 0;
+        opacity: 1
+    }
 }
 
 /* The Close Button. Modal Box with CSS and JavaScript - W3Schools tutorial */
@@ -208,19 +222,25 @@ Adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
 /* Modal Box with CSS and JavaScript - W3Schools tutorial */
 .close:hover,
 .close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* Modal Box with CSS and JavaScript - W3Schools tutorial */
 .modal-header {
-  padding: 2px 16px;
-  color: white;
+    padding: 2px 16px;
+    color: white;
 }
 
 /* Modal Box with CSS and JavaScript - W3Schools tutorial */
-.modal-body {padding: 2px 16px;}
+.modal-body {
+    padding: 2px 16px;
+}
+
+#results-section p {
+    line-height: 3rem;
+}
 
 
 /* ---------------------------------- MEDIA QUERIES */
@@ -229,7 +249,7 @@ Adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
    flex-item can shrink to fit the container
    the width of flex-item is auto calculated */
 
-   @media screen and (min-width: 768px) {
+   @media screen and (min-width: 767px) {
     .flex-item {
         flex: 1;
     }
@@ -240,7 +260,7 @@ Adopted code from this example https://www.w3schools.com/howto/tryit.asp?filenam
 }
 
 /* hide background image and remove margin for smaller devices*/
-@media only screen and (max-width: 768px) and (min-width: 0px) {
+@media only screen and (max-width: 767px) and (min-width: 0px) {
     body {
         background-image:none;
     }
